--- a/adminpanels/src/main/res/layout/cardmenu_item.xml
+++ b/adminpanels/src/main/res/layout/cardmenu_item.xml
@@ -76,6 +76,29 @@
             android:text="Kategori" />
 
         <TextView
+            android:id="@+id/textMinimum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textHargaMenu"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="50dp"
+            android:layout_toEndOf="@+id/imgMenuItem2"
+            android:text="Minimum Order"
+            android:visibility="gone"/>
+        <TextView
+            android:id="@+id/textKeterangann"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textHargaMenu"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginEnd="50dp"
+            android:layout_toEndOf="@+id/imgMenuItem2"
+            android:text="Keterangan"
+            android:visibility="gone"/>
+
+        <TextView
             android:id="@+id/textCatering"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
