--- a/app/src/main/res/layout-normal/activity_detail_menu.xml
+++ b/app/src/main/res/layout-normal/activity_detail_menu.xml
@@ -113,42 +113,42 @@
                     tools:ignore="ContentDescription" />
 
                 <RadioGroup
+                    android:id="@+id/radioGroup"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
                     android:layout_below="@id/view_batas"
-                    android:layout_toEndOf="@id/img_time"
+                    android:layout_centerInParent="true"
                     android:layout_marginTop="2dp"
-                    android:orientation="horizontal"
-                    android:id="@+id/radioGroup">
+                    android:layout_toEndOf="@id/img_time"
+                    android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/radio_siang"
                         android:layout_width="75dp"
                         android:layout_height="wrap_content"
-                        android:text="Siang"
-                        android:onClick="checkButton"
+                        android:layout_marginEnd="5dp"
                         android:background="@drawable/bg_btn_waktu"
                         android:button="@android:color/transparent"
-                        android:paddingBottom="2dp"
-                        android:textSize="14sp"
-                        android:gravity="center"
                         android:checked="true"
-                        android:layout_marginEnd="5dp"
+                        android:gravity="center"
+                        android:onClick="checkButton"
+                        android:paddingBottom="2dp"
+                        android:text="Siang"
+                        android:textSize="14sp"
                         tools:ignore="HardcodedText" />
 
                     <RadioButton
                         android:id="@+id/radio_sore"
                         android:layout_width="75dp"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="2dp"
-                        android:text="Sore"
-                        android:onClick="checkButton"
                         android:background="@drawable/bg_btn_waktu"
                         android:button="@android:color/transparent"
-                        android:textSize="14sp"
-                        android:gravity="center"
                         android:checked="true"
+                        android:gravity="center"
+                        android:onClick="checkButton"
+                        android:paddingBottom="2dp"
+                        android:text="Sore"
+                        android:textSize="14sp"
                         tools:ignore="HardcodedText" />
 
                 </RadioGroup>
@@ -180,11 +180,11 @@
                     android:layout_marginStart="7dp"
                     android:background="@color/White"
                     android:fontFamily="@font/reg"
+                    android:importantForAutofill="no"
                     android:inputType="none"
                     android:textColor="@android:color/black"
                     android:textSize="13sp"
                     android:textStyle="bold"
-                    android:importantForAutofill="no"
                     tools:ignore="LabelFor" />
 
                 <EditText
@@ -193,13 +193,13 @@
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_tanggal"
                     android:layout_marginStart="7dp"
+                    android:layout_marginTop="4dp"
                     android:background="@color/White"
                     android:fontFamily="@font/reg"
+                    android:inputType="none"
                     android:textColor="@android:color/black"
-                    android:layout_marginTop="4dp"
                     android:textSize="14sp"
                     android:textStyle="bold"
-                    android:inputType="none"
                     tools:ignore="Autofill,LabelFor" />
 
             </RelativeLayout>
@@ -293,25 +293,21 @@
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
                 tools:ignore="HardcodedText" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
                 android:orientation="vertical">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Keterangan : "
-                    android:textColor="@android:color/black"/>
                 <TextView
                     android:id="@+id/text_keterangan_menu"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Isi Keterangan"
-                    android:layout_marginBottom="5dp"/>
+                    android:layout_marginBottom="5dp"
+                    android:text="Isi Keterangan" />
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -361,11 +357,13 @@
                     android:text="Jumlah Pesanan Anda"
                     android:textColor="@android:color/black"
                     tools:ignore="HardcodedText" />
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@id/harga_detail_menu"
                     android:gravity="right">
+
                     <TextView
                         android:id="@+id/tv_minimal_beli"
                         android:layout_width="wrap_content"
@@ -392,11 +390,11 @@
                 android:layout_weight="1"
                 android:background="@drawable/bg_btn_black"
                 android:gravity="center"
+                android:inputType="number"
                 android:text="20"
                 android:textColor="@android:color/black"
                 android:textSize="22sp"
-                tools:ignore="Autofill,HardcodedText,LabelFor"
-                android:inputType="number" />
+                tools:ignore="Autofill,HardcodedText,LabelFor" />
 
             <ImageView
                 android:id="@+id/btn_minus"
@@ -410,9 +408,9 @@
                 android:id="@+id/btn_plus"
                 android:layout_width="30dp"
                 android:layout_height="34dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="2dp"
                 android:src="@drawable/ic_plus"
-                android:layout_marginStart="5dp"
                 tools:ignore="ContentDescription" />
         </LinearLayout>
 
@@ -432,11 +430,10 @@
 
 
             <LinearLayout
+                android:id="@+id/text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:id="@+id/text"
-                >
+                android:layout_marginStart="15dp">
 
                 <TextView
                     android:id="@+id/tv"
@@ -452,9 +449,9 @@
                 android:id="@+id/bayar"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:layout_below="@id/text"
                 android:layout_marginStart="15dp"
-                android:layout_below="@id/text">
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/rp4"
@@ -462,9 +459,9 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/medium"
                     android:text="Rp."
+                    android:textColor="@android:color/black"
                     android:textSize="19sp"
                     android:textStyle="bold"
-                    android:textColor="@android:color/black"
                     tools:ignore="HardcodedText" />
 
                 <TextView
@@ -481,9 +478,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="right"
                 android:layout_marginEnd="15dp"
                 android:layout_toEndOf="@+id/bayar"
+                android:gravity="right"
                 tools:ignore="RtlHardcoded">
 
                 <Button
