--- a/app/src/main/res/layout/item_row_chart.xml
+++ b/app/src/main/res/layout/item_row_chart.xml
@@ -66,30 +66,30 @@
             tools:ignore="HardcodedText,RelativeOverlap" />
 
         <TextView
-            android:id="@+id/price_chart2"
+            android:id="@+id/katering_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_Rp"
             android:layout_toEndOf="@id/quantity_chart"
             android:layout_marginTop="2dp"
-            android:text="Edit"
+            android:text="Dpawon"
             android:layout_marginStart="10dp"
-            android:textColor="@color/Green_natural"
+            android:textColor="@color/RedDark"
             android:textSize="14sp"
             tools:ignore="HardcodedText,RelativeOverlap" />
 
 
 
         <TextView
-            android:id="@+id/katering_chart"
+            android:id="@+id/edit_chart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="22dp"
             android:layout_marginTop="7dp"
             android:layout_marginStart="100sp"
             android:layout_alignParentEnd="true"
-            android:text="25/08/2020"
-            android:textColor="#000"
+            android:text="Edit"
+            android:textColor="@color/Green_natural"
             android:textSize="14sp"
             tools:ignore="HardcodedText" />
 
@@ -101,7 +101,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginStart="100sp"
             android:layout_alignParentEnd="true"
-            android:layout_below="@id/katering_chart"
+            android:layout_below="@id/edit_chart"
             android:text="Waktu: 10.30"
             android:textColor="#000"
             android:textSize="14sp"
